# Q-Theory

./: .gitignore  README.md  pauli.py  pyproject.toml
examples/: rabi-frequency.ipynb  rk4.ipynb  rwa.ipynb  simple_calc.ipynb
heisenberg/: __init__.py  pauli.py
qupie/operators/: boson.py  operator.py  pauli.py
qupie/states/: base.py
qupie/time_evolution/: base.py  integrator.py
tests/: addition_test.py  pauli_test.py  simple_test.py
